hack/istio/multicluster/resources/zipkin-gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: zipkin-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: zipkin
    port: 9411
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: zipkin-route
  namespace: istio-system
spec:
  parentRefs:
  - name: zipkin-gateway
  rules:
  - backendRefs:
    - name: zipkin
      port: 9411
